--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ API_KEY=IDAMJJBKEVFBEJ3QU6
 Client_secret=ATEAW7G72UPY4JC2G4GP6Q2LOROMSJMU6SSHOA4BJXRYEOGAHF
 PUBLIC_TOKEN=OUY63DJB2YOQIVCU5W5W
 TICKETMASTER_API_KEY=vXlxcBZYbOab4vyt72xsQsQhg1pEzFGR
+REDDIT_CLIENT_ID=NVjQZTYET81uqpPg6lfgFA
+REDDIT_SECRET=a04RIjcYF6ze4FtaS_APyi3iN287ng
+REDDIT_USER_AGENT=clima_project:1.0 (by u/Turbulent_Yard9955)
