--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 __pycache__
 .learn
+ciudades_con_clima.csv
+ciudades_con_eventos.csv
+ciudades_con_reddit.csv
+Codigos_aeropuestos.csv
+Datos_climaticos_completos_hist.csv
+perfiles_completos_destinos_temporada.csv
