--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
 __pycache__
 .learn
+.env
 ciudades_con_clima.csv
 ciudades_con_eventos.csv
 ciudades_con_reddit.csv
 Codigos_aeropuestos.csv
 Datos_climaticos_completos_hist.csv
 perfiles_completos_destinos_temporada.csv
+generate_list.py
+merged_dataset_vuelos_240k.csv
+merged_dataset_vuelos_240k.csv.gz
+dataset_completo.csv
+hotels_with_distance_dataset.csv
+merged_flight_dataset.csv
+total_data_240k.csv.gz
