--- a/.env
+++ b/.env
@@ -15,3 +15,4 @@ REDDIT_SECRET=a04RIjcYF6ze4FtaS_APyi3iN287ng
 REDDIT_USER_AGENT=clima_project:1.0 (by u/Turbulent_Yard9955)
 RAPID_API_KEY=00a9d75f9cmshe80dc90d83ba4b2p1f5989jsn9ca86a8265e4
 RAPID_API_HOST=skyscanner44.p.rapidapi.com
+API_KEY
